set port 80 and video save/convert to audio

--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
                 }
             };
             mediaRecorder.onstop = function () {
-                saveFile(recordedChunks);
+                //saveFile(recordedChunks);
                 recordedChunks = [];
                 socket.emit('message', 'stop');
             };
