--- a/templates/menu.html
+++ b/templates/menu.html
@@ -17,5 +17,5 @@
     <a href="/logout" class="back" title="logout"><img src="/static/back.png" alt="back"></a>
     <a class="menu-btn expand" href="/recorder">Grabar audio</a>
     <a class="menu-btn expand" href="/player">Ver audios grabados</a>
-    <a class="menu-btn expand" href="/transcriptor">Transcripción en tiempo real</a>
+    <a class="menu-btn expand" href="/transcript">Transcripción en tiempo real</a>
 {% endblock content %}
