--- a/templates/player.html
+++ b/templates/player.html
@@ -30,7 +30,7 @@
     </dialog>
 {% endblock content %}
 {% block javascript%}
-<script src="/static/js/socket.io.min.js"></script>
+<script src="/static/js/socket.io.js"></script>
     <script>
         const socket = io();
     </script>
