--- a/templates/recorder.html
+++ b/templates/recorder.html
@@ -27,7 +27,7 @@
 {% block javascript%}
     <script src="/static/js/socket.io.js"></script>
     <script src="/static/js/socket.config.js"></script>
-    <script src="/static/js/record.js"></script>
+    <script src="/static/js/recordv.0.0.1.js"></script>
     <script>
         let start = document.getElementById('start'),
             stopBtn = document.getElementById('stop'),
